<resources>
    <string name="app_name">Agenda Interativa</string>
    <string name="action_settings">Settings</string>
    <string name="button_send">Salvar</string>
    <string name="button_search">Procurar Endereço</string>
    <string name="button_clear">Limpar</string>
    <string name="button_photo">Tirar Foto</string>
    <string name="field_name">Nome: </string>
    <string name="field_adress">Endereço: </string>
    <string name="field_email">E-mail: </string>
    <string name="field_phone">Telefone: </string>

</resources>
