<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="341dp"
        android:layout_height="match_parent">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            android:id="@+id/save_button"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginStart="45dp"
            android:layout_marginBottom="119dp"
            android:onClick="save"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_photo"
            android:id="@+id/photo_button"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/save_button"
            android:layout_marginBottom="45dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_clear"
            android:id="@+id/clear_button"
            android:layout_alignTop="@+id/save_button"
            android:layout_toEndOf="@+id/save_button"
            android:layout_marginStart="58dp"
            android:onClick="clearFields"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_search"
            android:id="@+id/search_adress"
            android:layout_alignTop="@+id/photo_button"
            android:layout_alignStart="@+id/clear_button"
            android:onClick="findMap"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/field_email"
                android:id="@+id/textView"
                android:layout_marginStart="41dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/field_adress"
                android:id="@+id/textView6"
                android:layout_above="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:layout_marginBottom="41dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/field_phone"
                android:id="@+id/textView7"
                android:layout_above="@+id/textView6"
                android:layout_alignStart="@+id/textView6"
                android:layout_marginBottom="41dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/field_name"
                android:id="@+id/textView8"
                android:layout_above="@+id/textView7"
                android:layout_alignStart="@+id/textView7"
                android:layout_marginBottom="41dp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/campo_nome"
                android:layout_above="@+id/textView7"
                android:layout_alignStart="@+id/textView7"
                android:layout_alignParentEnd="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/campo_telefone"
                android:layout_above="@+id/textView6"
                android:layout_alignStart="@+id/textView6"
                android:layout_alignEnd="@+id/campo_nome" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/campo_endereco"
                android:layout_above="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:layout_alignEnd="@+id/campo_telefone" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/campo_email"
                android:layout_below="@+id/textView"
                android:layout_alignStart="@+id/textView"
                android:layout_alignEnd="@+id/campo_endereco" />

        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>