<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="none.agendainterativa.AgendaActivity"
    tools:showIn="@layout/activity_agenda">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="left|center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/field_name"
                android:id="@+id/textView2"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="false"
                android:layout_marginStart="34dp"
                android:layout_marginTop="151dp"
                android:layout_alignParentEnd="false" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/field_phone"
                android:id="@+id/textView3"
                android:layout_below="@+id/textView2"
                android:layout_alignStart="@+id/textView2"
                android:layout_marginTop="28dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/field_adress"
                android:id="@+id/textView4"
                android:layout_centerVertical="true"
                android:layout_alignStart="@+id/textView3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/field_email"
                android:id="@+id/textView5"
                android:layout_below="@+id/textView4"
                android:layout_alignStart="@+id/textView4"
                android:layout_marginTop="39dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_send"
                android:id="@+id/save_button"
                android:layout_below="@+id/textView5"
                android:layout_alignStart="@+id/textView5"
                android:layout_marginTop="70dp"
                android:onClick="save"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/button_search"
                android:id="@+id/search_adress"
                android:layout_alignBottom="@+id/save_button"
                android:layout_toEndOf="@+id/save_button"
                android:layout_marginStart="36dp"
                android:onClick="findMap"


            />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/imageView"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:id="@+id/campo_telefone"
                android:layout_alignBottom="@+id/textView3"
                android:layout_alignEnd="@+id/search_adress"
                android:layout_alignStart="@+id/campo_endereco" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress"
                android:ems="10"
                android:id="@+id/campo_endereco"
                android:layout_above="@+id/textView5"
                android:layout_alignEnd="@+id/search_adress" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/campo_email"
                android:layout_alignBottom="@+id/textView5"
                android:layout_alignStart="@+id/campo_telefone" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/campo_nome"
                android:layout_above="@+id/textView3"
                android:layout_alignEnd="@+id/campo_telefone"
                android:layout_alignStart="@+id/campo_endereco" />

        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>
